# zqlite

./: .gitignore  :memory:  BTREE_FIX_SUMMARY.md  CHANGELOG.md  CIPHER.md  CIPHER_INTEGRATION.md  CLAUDE.md  COMPATIBILITY.md  CRYPTO_PROJECTS.md  DEVNOTES.md  GHOSTMESH.md  GHOSTWIRE_WISHLIST.md  Ghostwire.md  GhostwireInstall.sh  HOWTO_ZCRYPTO.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_COMPLETE.md  JARVIS.md  LICENSE  NEXTGEN_ZQLITE.md  PRODUCTION_READINESS_SUMMARY.md  PRODUCTION_READINESS_V1.4.0.md  README.md  ROADMAP.md  RUST_PROJECT_INTEGRATION.md  SIMPLIFICATION.md  TODO.md  VERSION_ASSESSMENT.md  ZAUR_FIXLIST.md  ZCRYPTO_API.md  ZCRYPTO_INTEGRATION.md  ZQLITE_FIXLIST.md  ZQLITE_ZVM_GUIDE.md  ZTODO.md  build.zig  build.zig.zon  build.zig.zon.new  demo_enhanced_features.zig  install.sh  shroud_API.md  (+6 more)
.github/workflows/: ci.yml
assets/assets/icons/macos/: zqlite.icns
docker/: .dockerignore  Dockerfile  README.md  docker-compose.yml
examples/: advanced_indexing_demo.zig  blockchain_integration.zig  cipher_dns.zig  datetime_test.zig  ghostmesh_vpn_coordination.zig  ghostwire_integration_demo.zig  hybrid_crypto_banking.zig  improved_api_demo.zig  insert_memory_regression_test.zig  nextgen_database.zig  post_quantum_showcase.zig  powerdns_example.zig  production_database_server.zig  rust_integration.md  secure_storage_system.zig  simple_api_test.zig  universal_api_demo.zig  web_backend_demo.zig  zns_ghostchain_demo.zig
ghostwire/: Cargo.toml
ghostwire/ghostwire-client/: Cargo.toml
ghostwire/ghostwire-client/src/: lib.rs
ghostwire/ghostwire-common/: Cargo.toml
ghostwire/ghostwire-common/src/: crypto.rs  lib.rs  network.rs  protocol.rs
ghostwire/ghostwire-proto/: Cargo.toml
ghostwire/ghostwire-proto/src/: lib.rs
ghostwire/ghostwire-server/: Cargo.toml
ghostwire/ghostwire-server/src/: config.rs  coordination.rs  database.rs  handlers.rs  main.rs  metrics.rs  middleware.rs
ghostwire/zqlite-rs/: Cargo.toml  build.rs
ghostwire/zqlite-rs/src/: async_connection.rs  error.rs  lib.rs  metrics.rs  pool.rs  row.rs
include/: zqlite.h
src/: main.zig  version.zig  zqlite.zig
src/cluster/: manager.zig
src/concurrent/: async_operations.zig  batch_processor.zig  deterministic_engine.zig  hot_standby.zig  mvcc_transactions.zig  secure_storage.zig  thread_safety.zig
src/crypto/: hash_verification.zig  interface.zig  secure_storage.zig  secure_storage_legacy.zig  secure_storage_v2.zig  zns_adapter.zig
src/db/: btree.zig  connection.zig  connection_pool.zig  encryption.zig  memory_pool.zig  migration.zig  pager.zig  storage.zig  wal.zig
src/distributed/: query_engine.zig
src/error_handling/: database_errors.zig  enhanced_errors.zig
src/examples/: array_operations_demo.zig  connection_pool_demo.zig  json_demo.zig  query_cache_demo.zig  uuid_demo.zig  window_functions_demo.zig
src/executor/: functions.zig  planner.zig  prepared_statements.zig  vm.zig  window_functions.zig
src/ffi/: c_api.zig
src/indexing/: advanced_indexes.zig
src/json/: json_support.zig
src/logging/: logger.zig
src/parser/: ast.zig  parser.zig  tokenizer.zig
src/performance/: cache_manager.zig  query_cache.zig
src/shell/: cli.zig
src/sqlite_compat/: sqlite_compatibility.zig
src/transport/: pq_quic.zig  transport.zig
src/wallet/: encrypted_storage.zig  hd_wallet.zig  key_manager.zig
src/zeppelin/: package_manager.zig
temp_test/: build.zig  build.zig.zon
temp_test/src/: main.zig
tests/: test_runner.zig
tests/bench/: benchmark_baseline.json  benchmark_suite.zig  benchmark_validator.zig  minimal_bench.zig  simple_benchmark.zig  working_benchmark.zig
tests/fuzz/: sql_parser_fuzzer.zig
tests/logging/: logger_test.zig
tests/memory/: create_table_leak_test.zig  intensive_memory_test.zig  leak_detection_test.zig  memory_management_test.zig  simple_memory_test.zig
tests/unit/: query_validation_test.zig  sqlite_functionality_test.zig
