[workspace]
members = [
    "ghostwire-server",    # Coordination server (uses zqlite)
    "ghostwire-client",    # Node agent
    "ghostwire-common",    # Shared types
    "ghostwire-proto",     # Wire protocol
    "zqlite-rs",           # Rust bindings for ZQLite
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.11", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.8"
tonic = "0.12"
prost = "0.13"
metrics = "0.24"
metrics-exporter-prometheus = "0.17"
quinn = "0.11"
rustls = "0.23"
rcgen = "0.13"
ring = "0.17"
libc = "0.2"

# Additional dependencies
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "timeout"] }
axum-test = "18.1"
clap = { version = "4.5", features = ["derive", "env"] }
config = "0.14"
toml = "0.8"

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]