[package]
name = "ghostwire-common"
version = "0.1.0"
edition = "2021"
authors = ["Ghostwire Team <team@ghostwire.dev>"]
description = "Shared types and utilities for Ghostwire mesh VPN"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["time"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
hex = "0.4"
ipnetwork = "0.20"
const_format = "0.2"

# Networking
quinn = { workspace = true }
rustls = { workspace = true }

# Crypto
ring = { workspace = true }
rcgen = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"