[package]
name = "ghostwire-proto"
version = "0.1.0"
edition = "2021"
authors = ["Ghostwire Team <team@ghostwire.dev>"]
description = "Protocol definitions for Ghostwire"
license = "MIT OR Apache-2.0"

[dependencies]
tonic = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }