[package]
name = "ghostwire-server"
version = "0.1.0"
edition = "2021"
authors = ["Ghostwire Team <team@ghostwire.dev>"]
description = "Ghostwire coordination server with ZQLite backend"
license = "MIT OR Apache-2.0"

[[bin]]
name = "ghostwire-server"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
ghostwire-common = { path = "../ghostwire-common" }
ghostwire-proto = { path = "../ghostwire-proto" }
zqlite-rs = { path = "../zqlite-rs", features = ["async", "crypto", "json"] }

# Core async runtime
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }

# HTTP API
axum = { workspace = true }

# gRPC
tonic = { workspace = true }
prost = { workspace = true }

# Observability
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }

# Configuration
clap = { workspace = true }
config = { workspace = true }
toml = { workspace = true }

# HTTP middleware
tower = { workspace = true }
tower-http = { workspace = true }

# Networking and crypto
quinn = { workspace = true }
rustls = { workspace = true }
rcgen = { workspace = true }
ring = { workspace = true }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
hex = "0.4"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
axum-test = { workspace = true }