[package]
name = "zqlite-rs"
version = "0.1.0"
edition = "2021"
authors = ["Ghostwire Team <team@ghostwire.dev>"]
description = "Rust bindings for ZQLite - High-performance embedded database with post-quantum cryptography"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ghostkellz/zqlite"
keywords = ["database", "sql", "embedded", "post-quantum", "crypto"]
categories = ["database-implementations"]

[dependencies]
libc = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, optional = true }
tracing = { workspace = true }
uuid = { workspace = true }

[build-dependencies]
cc = "1.0"
bindgen = "0.70"
pkg-config = "0.3"

[features]
default = ["async"]
async = ["tokio"]
crypto = []
json = []
compression = []

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
criterion = "0.5"